# Devconf-Multi-Agent-System

./: .env.sample  .gitignore  README.md  pyproject.toml
adk_web/: agent.py
remote_agents/github_search_agent/: README.md  agent.py  prompt.py  tools.py
remote_agents/google_search_agent/: README.md  agent.py  prompt.py
remote_agents/web_search_agent/: README.md  agent.py  prompt.py  tools.py
src/orchestrator/: config.py  constants.py  exception_handlers.py  instructions.py  lifespan.py  main.py  middleware.py  session_context.py  state_keys.py  summarizing_a2a_agent.py  supervisor.py
src/orchestrator/agent_cards/: github_agent_card.json  google_search_agent_card.json  web_search_agent_card.json
src/orchestrator/apis/: auth.py  models.py
src/orchestrator/apis/conversations/: models.py  router.py
src/orchestrator/apis/feedback/: models.py  router.py  service.py
src/orchestrator/apis/history/: models.py  router.py  service.py
src/orchestrator/apis/meta/: models.py  router.py  status.py
src/orchestrator/db/: __init__.py  base.py
src/orchestrator/db/events/: crud.py  models.py
src/orchestrator/db/feedback/: crud.py  models.py
src/orchestrator/db/sessions/: crud.py  models.py
src/orchestrator/safety/: canned_responses.py  exceptions.py  granite_guardian_helpers.py  guardian_prompts.py  guardrails.py  guardrails_types.py
src/orchestrator/utils/: app_utils.py  tracing_utils.py
